# template_inferno

./: .gitignore  01_introduction.cpp  03_recursion_is_prime.cpp  CMakeLists.txt  README.md  lecture_2.cpp
